# ConwayGameOfLife_CPP

./: .gitignore  GET_STARTED.md  README.md  junk.c  notes.txt
3D/: led_stand.scad  led_stand.stl  notch_frame.3mf  notch_frame.scad  notch_frame.stl  test_frame.scad  test_frame.stl  test_frame_0.15mm_PLA_MK3_1h0m.gcode  test_frame_0.15mm_PLA_MK3_32m.gcode  test_frame_0.15mm_PLA_MK3_52m.gcode
3D/3mm pitch/: display.scad  display.stl  display2.scad  display2.stl  display3.scad  display3.stl  display_frame.stl  peg.scad  peg.stl  pegs.scad  pegs.stl  pegs2.stl  pegs3.scad  pegs3.stl  text.scad
mock/: readme.txt
src/: CTestTestfile.cmake  DartConfiguration.tcl  board.cpp  board.h  game.cpp  game.h  junk.c  junk.txt  life.cpp  life.h  matrixAdapter.cpp  matrixAdapter.h  readme.md  rules.cpp  rules.h  src.ino  src.ino.adafruit
test/: Arduino.cpp  Arduino.h  CMakeLists.txt  mockMatrixAdapter.cpp  mockMatrixAdapter.h  readme.txt  testboard.cpp  testdefault.cpp  testgame.cpp  testneighbors.cpp  testrandom.cpp  testrules.cpp
